RESOLVED FIXED35496
Opening newsweek.com and youtube.com has become very slow in debug builds
https://bugs.webkit.org/show_bug.cgi?id=35496
Summary Opening newsweek.com and youtube.com has become very slow in debug builds
Alexey Proskuryakov
Reported 2010-02-28 11:11:47 PST
HashMap consistency checks introduced in <http://trac.webkit.org/changeset/53957> are too slow in this case. <rdar://problem/7663444>
Attachments
remove consistency checks (1.84 KB, patch)
2010-02-28 11:17 PST, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2010-02-28 11:17:30 PST
Created attachment 49700 [details] remove consistency checks Despite being important, these checks are not meant to make debug builds unlivable...
mitz
Comment 2 2010-02-28 11:20:48 PST
Comment on attachment 49700 [details] remove consistency checks r=me
Alexey Proskuryakov
Comment 3 2010-02-28 12:05:26 PST
Note You need to log in before you can comment on or make changes to this bug.