        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=35496
        <rdar://problem/7663444> Opening newsweek.com and youtube.com has become very slow in debug builds

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSRuleSet::getIDRules):
        (WebCore::CSSRuleSet::getClassRules):
        (WebCore::CSSRuleSet::getTagRules):
        Removed consistency checks, as they affect performance too much in this case.



Canonical link: https://commits.webkit.org/46660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55359 268f45cc-cd09-0410-ab3c-d52691b4dbfc